src/styles/sidebar.css
.sidebar {
    width: 100%;
    height: 100%;
    background-color: var(--neutral-200);
    display: grid;
    grid-template-rows: auto auto 1fr auto;
}

.sidebar .hamburger:hover {
    color: var(--title);
}

.sidebar .hamburger {
    color: var(--neutral-900);
    display: none;
    width: 30px;
    height: 30px;
}

.sidebar .hamburger svg {
    width: 100%;
    height: 100%;
}

.sidebar .logo {
    color: var(--blue-500);
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 50px 0;
}

.sidebar .logo svg {
    width: 40px;
    height: 40px;
}

.sidebar .logo a {
    text-decoration: none;
    color: var(--title);
    font-size: 2rem;
    font-weight: 900;
}

.sidebar .nav {
    display: flex;
    justify-content: space-evenly;
    gap: 10px;
    margin: 10px;
}

.sidebar .nav-card {
    display: grid;
    grid-template-columns: 1fr auto;
    width: 50%;
    border-radius: 20px;
    background-color: var(--card);
    padding: 20px;
    color: #4d4d4d;
    font-size: 1.2rem;
    cursor: pointer;
}

.sidebar .nav-card:hover {
    background-color: var(--blue-400);
    color: white;
}

.sidebar .nav-card:hover .my-day-icon,
.sidebar .nav-card:hover .all-tasks-icon {
    background-color: white;
    color: var(--title);
}

.sidebar .nav-card span {
    font-size: 1.8rem;
}
.sidebar .nav-card svg {
    margin-right: auto;
    width: 20px;
    height: 20px;
    color: white;
    padding: 10px;
    border-radius: 50%;
}

.sidebar .nav-card .my-day-icon {
    background-color: var(--title);
}

.sidebar .nav-card .all-tasks-icon {
    background-color: var(--title);
}

.sidebar .lists {
    display: flex;
    flex-direction: column;
    font-size: 1.2rem;
}

.sidebar .lists hr {
    width: 100%;
    margin-bottom: 10px;
}

.sidebar .list {
    padding: 10px 50px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    cursor: pointer;
    border-radius: 10px;
    gap: 10px;
    margin: 1px 10px 2px 10px;
    color: var(--neutral-700);
    transition: padding 400ms ease-in-out;
}

.sidebar .active {
    /* transform: scale(1.1); */
    /* background-color: var(--neutral-300); */
    padding-left: 70px;
    background-color: var(--neutral-300);
    transition: padding 400ms ease-in-out;
}

.sidebar .list:hover {
    background-color: var(--blue-400);
    color: white;
}

.sidebar .list svg {
    background-color: var(--blue-400);
    color: white;
    padding: 10px;
    border-radius: 50%;
}

.sidebar .list:hover svg {
    background-color: white;
    color: var(--blue-400);
}
.sidebar .list:hover span {
    color: white;
}

.sidebar .list span {
    color: var(--neutral-400);
    font-weight: 600;
    margin-left: auto;
}

.sidebar .new-list {
    background-color: var(--neutral-200);
    padding: 5px;
    padding-left: 40px;
    display: flex;
    gap: 10px;
    justify-content: flex-start;
    align-items: center;
    cursor: pointer;
    border-top: 1px solid var(--neutral-500);
    box-shadow: 0px -2px 5px var(--neutral-500);
    color: #4d4d4d;
}

.sidebar .new-list:hover {
    background-color: var(--blue-400);
    color: white;
}

.sidebar .new-list .new-list-button {
    font-weight: 600;
}

